fix: overlap filter modal with chat box

--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -149,6 +149,7 @@ div.ace-line {
 #filterModal{
   right: 0;
   width: 430px;
+  z-index: 9999
 }
 
 .filterModal-popup {
